--- a/sass/_intro.scss
+++ b/sass/_intro.scss
@@ -3,6 +3,7 @@
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
 
+
 	&__block {
 		background-color: $color-grey;
 		position: absolute;
@@ -10,39 +11,43 @@
 		top: 0;
 		width: 100%;
 		height: 100%;
+
 	}
 
-	&__title {
-		color: $color-white;
-	}
+&__title{
+	color: $color-white
+}
 
 	&__text {
+
 		font-family: "RobotoSlab-Regular", sans-serif;
 		font-size: 14px;
 		margin-bottom: 10px;
 		opacity: 0;
 		transform: translateX(100%);
-	}
 
-	&__title {
-		margin-bottom: 35px;
-		font-size: 35px;
-		text-transform: uppercase;
-		display: flex;
-		flex-direction: column;
-		opacity: 0;
+			}
+
+			&__title {
+				margin-bottom: 35px;
+				font-size: 35px;
+				text-transform: uppercase;
+				display: flex;
+				flex-direction: column;
+				opacity: 0;
 		transform: translateX(100%);
 
-		&__span {
-			color: $color-pink;
-		}
-	}
+				&__span {
+					color: $color-pink;
+				}
 
-	&__btn {
-		margin-top: 20px;
-		opacity: 0;
+			}
+
+			&__btn{
+				margin-top: 20px;
+				opacity: 0;
 		transform: translateX(100%);
-	}
+			}
 }
 
 .intro__content {
@@ -60,17 +65,26 @@
 		flex-direction: column;
 		align-items: start;
 
-		&.active .intro__title,
-		&.active .intro__text,
-		&.active .intro__btn {
-			animation: show-out 0.4s linear both;
+
+			&.active .intro__title,
+			&.active .intro__text,
+			&.active .intro__btn{
+			animation:show-out .4s linear both;
 		}
+
+
 	}
 }
 
 .intro-left {
 	position: relative;
 }
+
+
+
+
+
+
 
 /* ============================= */
 /* media */
@@ -80,19 +94,31 @@
 		grid-template-columns: auto;
 		grid-template-rows: 622px auto;
 
+
 		&__content {
-			padding: 60px 50px;
+			padding:60px 50px;
 			min-height: auto;
 		}
 
 		&__title {
-			transform: translateX(-100%);
+
+	transform: translateX(-100%);
+
+
 		}
 
-		&.active .intro__title {
-			animation: show-out 0.4s linear both;
-		}
+		&.active .intro__title{
+		animation:show-out .4s linear both;
 	}
+	}
+
+
+
+
+
+
+
+
 }
 
 @media (max-width: 500px) {
