--- a/sass/_services.scss
+++ b/sass/_services.scss
@@ -44,6 +44,27 @@
 		}
 	}
 
+	&__back {
+		position: absolute;
+		top: 50%;
+		left: 0;
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		padding: 30px;
+		gap: 10px;
+translate: 0 -50%;
+		backface-visibility: hidden;
+		transform-style: preserve-3d;
+		transform: rotateY(180deg);
+	}
+
+	&__front {
+		backface-visibility: hidden;
+		transform-style: preserve-3d;
+	}
+
 	&__pic {
 		width: 100%;
 		aspect-ratio: 2 / 1;
@@ -62,19 +83,13 @@
 		font-size: 16px;
 	}
 
-	&__content,
-	&__back {
+	&__content {
 		position: relative;
 		display: flex;
 		flex-direction: column;
 		padding: 30px;
 		gap: 10px;
-	}
-
-	&__content {
 		width: 100%;
-		height: 100%;
-
 		transform: translateZ(50px);
 	}
 
@@ -99,23 +114,7 @@
 		}
 	}
 
-	&__back {
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
 
-		backface-visibility: hidden;
-		transform-style: preserve-3d;
-		transform: rotateY(180deg);
-		justify-content: center;
-	}
-
-	&__front {
-		backface-visibility: hidden;
-		transform-style: preserve-3d;
-	}
 }
 
 /* ============================= */
@@ -136,18 +135,35 @@
 
 		&__front {
 			transform-style: flat;
+
+			&::after{
+				display: block;
+				content: '';
+				position: absolute;
+				left: 0;
+				top: 0;
+				width: 100%;
+				height: 100%;
+				background-color: rgba($color: $color-purple, $alpha: 0.9);
+				transition: 0.5s;
+				opacity: 0;
+			}
+
+
 		}
 
 		&__back {
 			transform: none;
-			background-color: rgba($color: $color-purple, $alpha: 0.9);
 			color: $color-white;
 			transition: 0.5s;
-			opacity: 0;
 			transform-style: flat;
+			opacity: 0;
 		}
 
 		&:hover &__back {
+			opacity: 1;
+		}
+		&:hover &__front::after {
 			opacity: 1;
 		}
 
@@ -168,6 +184,7 @@
 		}
 
 		&__back {
+			min-height: auto;
 			transform: rotateY(180deg);
 			background-color: transparent;
 			color: inherit;
