--- a/css/main.css
+++ b/css/main.css
@@ -762,6 +762,13 @@ textarea {
   -webkit-transform: rotateY(180deg);
           transform: rotateY(180deg);
 }
+.service.rotated .service__inner {
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
+}
+.service.show-back .service__back, .service.show-back .service__front::after {
+  opacity: 1;
+}
 .service__inner {
   width: 100%;
   height: 100%;
@@ -930,6 +937,9 @@ textarea {
   .service__front {
     -webkit-transform-style: preserve-3d;
             transform-style: preserve-3d;
+  }
+  .service__front::after {
+    display: none;
   }
   .service__back {
     min-height: auto;
