--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -14,6 +14,10 @@
 
 	transition: transform 0.5s ease; /* Плавный переход для трансформации */
 
+&.hidden{
+	transform: translateY(-100%);
+}
+
 	&__inner {
 		padding-top: 0;
 		padding-bottom: 0;
@@ -22,25 +26,27 @@
 		justify-content: space-between;
 		gap: 40px;
 	}
-}
 
-.header__logo {
-	 border-radius: 8px;
-    padding: 8px 45px;
-	background-color: $color-pink;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	color: $color-white;
-	text-transform: uppercase;
-	flex-direction: column;
-	text-align: center;
-	font-size: 20px;
-	& span{
-		font-size: 15px;
-		line-height: 1;
+
+	&__logo {
+		 border-radius: 8px;
+		padding: 8px 45px;
+		background-color: $color-pink;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		color: $color-white;
+		text-transform: uppercase;
+		flex-direction: column;
+		text-align: center;
+		font-size: 20px;
+		& span{
+			font-size: 15px;
+			line-height: 1;
+		}
 	}
 }
+
 
 .nav {
 	display: flex;
