--- a/sass/_common.scss
+++ b/sass/_common.scss
@@ -2,6 +2,7 @@
 	// margin: 0 auto;
 	// min-height: 100vh;
 	// overflow: hidden;
+	margin-top: $header-height;
 	background-color: rgba(142, 106, 214,.3);
 
 	display: grid; /* Используем Grid */
