--- a/sass/_intro.scss
+++ b/sass/_intro.scss
@@ -1,8 +1,6 @@
 .intro {
-	margin-top: $header-height;
-	display: grid;
+		display: grid;
 	grid-template-columns: repeat(2, 1fr);
-
 
 	&__block {
 		background-color: $color-grey;
@@ -11,43 +9,39 @@
 		top: 0;
 		width: 100%;
 		height: 100%;
-
 	}
 
-&__title{
-	color: $color-white
-}
+	&__title {
+		color: $color-white;
+	}
 
 	&__text {
-
 		font-family: "RobotoSlab-Regular", sans-serif;
 		font-size: 14px;
 		margin-bottom: 10px;
 		opacity: 0;
 		transform: translateX(100%);
+	}
 
-			}
-
-			&__title {
-				margin-bottom: 35px;
-				font-size: 35px;
-				text-transform: uppercase;
-				display: flex;
-				flex-direction: column;
-				opacity: 0;
+	&__title {
+		margin-bottom: 35px;
+		font-size: 35px;
+		text-transform: uppercase;
+		display: flex;
+		flex-direction: column;
+		opacity: 0;
 		transform: translateX(100%);
 
-				&__span {
-					color: $color-pink;
-				}
+		&__span {
+			color: $color-pink;
+		}
+	}
 
-			}
-
-			&__btn{
-				margin-top: 20px;
-				opacity: 0;
+	&__btn {
+		margin-top: 20px;
+		opacity: 0;
 		transform: translateX(100%);
-			}
+	}
 }
 
 .intro__content {
@@ -65,26 +59,17 @@
 		flex-direction: column;
 		align-items: start;
 
-
-			&.active .intro__title,
-			&.active .intro__text,
-			&.active .intro__btn{
-			animation:show-out .4s linear both;
+		&.active .intro__title,
+		&.active .intro__text,
+		&.active .intro__btn {
+			animation: show-out 0.4s linear both;
 		}
-
-
 	}
 }
 
 .intro-left {
 	position: relative;
 }
-
-
-
-
-
-
 
 /* ============================= */
 /* media */
@@ -94,22 +79,18 @@
 		grid-template-columns: auto;
 		grid-template-rows: 622px auto;
 
-
 		&__content {
-			padding:60px 50px;
+			padding: 60px 50px;
 			min-height: auto;
 		}
 
 		&__title {
-
-	transform: translateX(-100%);
-
-
+			transform: translateX(-100%);
 		}
 
-		&.active .intro__title{
-		animation:show-out .4s linear both;
-	}
+		&.active .intro__title {
+			animation: show-out 0.4s linear both;
+		}
 	}
 }
 
