--- a/sass/_var.scss
+++ b/sass/_var.scss
@@ -7,6 +7,6 @@ $color-lightgrey: #f3f0fb;//#fafafa;
 $color-darkgrey: rgb(158, 146, 158);
 $color-purple:  rgb(58, 1, 54);;
 
+// $header-height: 0px; 
 
-$header-height: 87px;
-$header-height-min: 56px;
+
