--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,22 +1,18 @@
 .header {
 	position: fixed;
 
-	height: $header-height;
 	top: 0;
 	left: 0;
 	z-index: 1000;
 	width: 100%;
-	display: flex;
-	align-items: stretch;
-	justify-content: space-between;
 	box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
 	background-color: $color-lightgrey;
 
-	transition: transform 0.5s ease; /* Плавный переход для трансформации */
+	transition: transform 0.5s ease;
 
-&.hidden{
-	transform: translateY(-100%);
-}
+	&.hidden {
+		transform: translateY(-100%);
+	}
 
 	&__inner {
 		padding-top: 0;
@@ -27,10 +23,11 @@
 		gap: 40px;
 	}
 
-
 	&__logo {
-		 border-radius: 8px;
+		border-radius: 8px;
 		padding: 8px 45px;
+		margin-top: 5px;
+		margin-bottom: 5px;
 		background-color: $color-pink;
 		display: flex;
 		align-items: center;
@@ -39,63 +36,63 @@
 		text-transform: uppercase;
 		flex-direction: column;
 		text-align: center;
-		font-size: 20px;
-		& span{
-			font-size: 15px;
-			line-height: 1;
+		font-size: clamp(1rem, 0.821rem + 0.57vw, 1.25rem); //20px;
+
+		&__span {
+			font-size: 12px;
 		}
 	}
 }
 
-
 .nav {
-	display: flex;
-	height: 100%;
-	color: $color-purple;
 }
 
 .menu {
 	list-style: none;
 	display: flex;
-
 	justify-content: flex-end;
+
+	flex-wrap: wrap;
 	font-family: "RobotoSlab-Regular", sans-serif;
 	font-size: 14px;
 
 	&__item {
-		height: 100%;
-	}
-
-	&__link {
-		padding: 0px 20px;
-		height: 100%;
-		display: flex;
-		align-items: center;
 		position: relative;
-		z-index: 1;
-		text-transform: uppercase;
+		display: flex;
 
-		&:hover,
-		&:focus {
-			background-color: $color-lightgrey;
-			color: $color-pink;
-			outline: none;
-
-			&::before {
-				background-color: $color-lightgrey;
-				scale: 1.05;
-			}
+		&:hover::before,
+		&:focus::before {
+			background-color: $color-white;
 		}
 
 		&::before {
 			width: 100%;
-			height: 100%;
+			height: calc(100% + 2px);
 			z-index: -1;
 			position: absolute;
 			left: 0;
 			top: 0;
 			content: "";
 			transition: 0.3s;
+		}
+	}
+
+	&__link {
+		max-width: 300px;
+		overflow: hidden;
+		white-space: nowrap;
+		text-overflow: ellipsis;
+		padding: 33px 20px;
+
+		position: relative;
+		z-index: 1;
+		text-transform: uppercase;
+
+		&:hover,
+		&:focus {
+			color: $color-pink;
+			background-color: $color-white;
+			outline: none;
 		}
 	}
 }
@@ -109,25 +106,22 @@
 	}
 
 	.nav {
+		width: 100%;
+		padding: 20px;
 		position: fixed;
-		bottom: 100%;
+		justify-content: center;
+		align-items: center;
+		top: 0;
 		left: 0;
 		z-index: -1;
-		width: 100%;
-		height: auto;
-		padding-bottom: 20px;
-		padding-top: 20px;
-		justify-content: center;
-
-		align-items: center;
-
+		translate: 0 -100%;
+		overflow-y: auto;
+		max-height: var(--element-height);
 		background-color: rgba($color: $color-white, $alpha: 0.95);
-
+		opacity: 0;
 		transition: 0.3s;
 
 		& .menu__link {
-
-
 			padding: 20px 50px;
 		}
 
@@ -136,18 +130,14 @@
 			align-items: center;
 		}
 
-		&.open {
-			translate: 0 calc(100% + $header-height);
+		&.open .menu__link {
+			&:hover,
+			&:focus {
+				background-color: inherit;
 
-			& .menu__link {
-				&:hover,
-				&:focus {
+				&::before {
 					background-color: inherit;
-
-					&::before {
-						background-color: inherit;
-						scale: 0;
-					}
+					scale: 0;
 				}
 			}
 		}
@@ -160,42 +150,5 @@
 	}
 	.header__logo {
 		padding: 5px 20px;
-		font-size: 25px;
-	}
-}
-
-@media (max-width: 500px) {
-.header__logo{
-	font-size: 16px;
-}}
-
-@media (max-height: 500px) {
-	.nav {
-        max-height: calc(100vh - 87px);
-    }
-}
-
-@media (max-height: 370px) {
-.header{
-height: $header-height-min;
-}
-
-.nav {
-	max-height: calc(100vh - $header-height-min);
-
-	&.open {
-		translate: 0 calc(100% + $header-height-min);
-	}
-}
-
-	.menu{
-		display: grid;
-		grid-template-columns: repeat(2, 1fr);
-
-		&__item{
-			display: flex;
-			align-items: center;
-			justify-content: center;
-		}
 	}
 }
