--- a/sass/_reset.scss
+++ b/sass/_reset.scss
@@ -3,8 +3,9 @@
 *::after {
 	margin: 0;
 	padding: 0;
-
 	box-sizing: border-box;
+
+	-webkit-tap-highlight-color: transparent;
 }
 
 .visually-hidden {
