--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,8 +6,6 @@
 @import "fonts";
 @import "reset";
 
-@import "page_gallery";
-
 @import "animation";
 @import "common";
 @import "btns";
@@ -22,3 +20,4 @@
 
 @import "slider";
 @import "modal";
+@import "review-modal";
